--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "Xrutz-Bot",
   "version": "1.0.0",
-  "description": "JANGAN DI UBAH TOD LU CUMAN NUMPANG",
+  "description": "THIS IS A ONE DEVICE BOTT",
   "main": "main.js",
   "directories": {
     "lib": "lib"
@@ -10,7 +10,7 @@
     "test": "echo \"Error: no test specified\" && exit 1",
     "start": "node main.js"
   },
-  "author": "nino,iky,KurrXd",
+  "author": "IyanzXd",
   "dependencies": {
   "@adiwajshing/baileys": "github:adiwajshing/baileys",
     "axios": "^0.21.1",
